argocd/applications/docs/generated/deployment-docs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: docs
spec:
  selector:
    matchLabels:
      app: docs
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - image: registry.ide-newton.ts.net/lab/docs
          name: docs
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      nodeSelector:
        kubernetes.io/arch: arm64
