argocd/applications/docs/generated/service-docs.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: docs
