argocd/applications/docs/generated/ingress-route-docs.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs
  namespace: docs
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`docs.proompteng.ai`)
      services:
        - name: docs
          port: 80
